--- a/README.adoc
+++ b/README.adoc
@@ -89,3 +89,12 @@ Congratulations! You've just developed a publisher and consumer of JMS-based mes
 
 include::https://raw.githubusercontent.com/spring-guides/getting-started-macros/master/footer.adoc[]
 
+== AWS Test
+```bash
+# install activemq
+cd ~
+wget http://archive.apache.org/dist/activemq/5.14.0/apache-activemq-5.14.0-bin.tar.gz
+tar xzf apache-activemq-5.14.0-bin.tar.gz
+cd apache-activemq-5.14.0
+bin/activemq console # foreground
+```
